kubernetes-demo/sample_service/K8s-Demo/kubernetes/k8s_demo_service/k8s_demo_service_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "k8s_demo_service-v1"
  name: "vehicle-telemetry-v1"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "k8s_demo_service-v1"
  type: "ClusterIP"
