kubernetes-demo/sample_service/K8s-Demo/kubernetes/k8s_demo_service/k8s_demo_service_ingress.yaml
# Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "k8s_demo_service-v1"
  name: "vehicle-telemetry-v1"
  ownerReferences: []
spec:
  rules:
  - host: "vehicle-telemetry-v1"
    http:
      paths:
      - backend:
          serviceName: "vehicle-telemetry-v1"
          servicePort: 9090
        path: "/"
  tls: []
